# DoorDetection

./: README.md
librealsense/CMake/: external_libcurl.cmake
librealsense/examples/: CMakeLists.txt
librealsense/examples/measure/: rs-measure.cpp
librealsense/examples/measure_door/: CMakeLists.txt  main.cpp  package.xml  readPython.cpp  readPython.h  rs-measure.hpp  subscribe_all.cpp
librealsense/examples/measure_door/position_trans/: trans.py
librealsense/examples/measure_door/sq/: CMakeLists.txt  package.xml
librealsense/examples/measure_door/sq/src/: angle_pub.cpp  angle_sub.cpp  position_pub.cpp  position_sub.cpp  publish_all.cpp  quaternions.cpp  quaternions.h  readPython.cpp  readPython.h
librealsense/examples/measure_door/turtlebot/: CMakeLists.txt  move_turtle.cpp  package.xml  play
